--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  connectivity:
+  path_provider:
+  provider:
+  data_connection_checker:
+  sqflite:
+  http:
 
 dev_dependencies:
   flutter_test:
